--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div id="about" class="row">
         <!--Imagen de la derecha/arriba -->
         <div class="col-md-4 offset-md-1 p-0">
-          <img src="images/coding.jpg" alt="" class="img-fluid rounded">
+          <img src="https://raw.githubusercontent.com/miguelangelchgz/portafolio/master/images/coding.jpg" alt="" class="img-fluid rounded">
         </div>
         <!--Texto de la izquierda -->
         <div id="aboutColumn" class="col-md-7 order-md-first order-last p-0">
@@ -54,12 +54,12 @@
         <div class="col-sm-6 p-0">
           <h3>Contáctame</h3>
           <br>
-          <h4>Número de telefono</h4>
+          <a href="mailto:miguelangelchgz@gmail.com">miguelangelchgz@gmail.com</a>
         </div>
         <div class="col-sm-6 p-0">
           <h3 class="h3">Conectar</h3>
           <a target="_blank" href="http://www.github.com/miguelangelchgz" class="fab fa-github"></a>
-          <a target="_blank" href="http://t.me/miguelangelch" class="fab fa-linkedin"></a>
+          <a target="_blank" href="https://www.linkedin.com/in/miguelangelchgz/" class="fab fa-linkedin"></a>
           <a target="_blank" href="http://t.me/miguelangelch" class="fab fa-telegram-plane"></a>
         </div>
 
